--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,23 @@
 .container {
     max-width: 1200px;
     margin: auto;
+
+    border: black solid 1px;
 }
 
 .AppWrapper {
 
 }
 
-.AppWrapper span {
-    color: red;
+h2 {
+    font-size: 40px;
+    text-align: center;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+h4 {
+    font-size: 20px;
 }
