added Projects Component with interactive.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,6 +5,7 @@
     position: fixed;
     height: $page-padding-top;
     width: 100%;
+    z-index: 100;
 
     .headerFlexWrapper {
         display: flex;
