--- a/src/components/Main/Projects/Project/Project.module.scss
+++ b/src/components/Main/Projects/Project/Project.module.scss
@@ -4,12 +4,14 @@
 $transition-time: 1s;
 
 .projectWrapper {
-  &:not(:first-child) {
-    margin-left: 20px;
-  }
+
+  // transition for colorEffect
+  transition-duration: 3s;
+
+  margin-left: 20px;
+  margin-bottom: 20px;
 
   position: relative;
-  display: inline-block;
   cursor: pointer;
 
   .contentWrapper {
@@ -18,6 +20,15 @@ $transition-time: 1s;
     overflow: hidden;
     position: relative;
     border: white solid 2px;
+    transition-duration: $transition-time;
+
+    &:hover {
+      transform: scale(1.1);
+
+      .descriptions {
+        opacity: 1;
+      }
+    }
 
     img {
       display: inline-block;
@@ -26,43 +37,58 @@ $transition-time: 1s;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      transition-duration: $transition-time;
 
       &:hover {
         height: 100%;
       }
+    }
 
+    .descriptions {
+      opacity: 0;
       transition-duration: $transition-time;
-    }
 
-    &:hover {
-      transform: scale(1.1);
-    }
+      color: black;
+      font-weight: bold;
+      background-color: rgba(255, 255, 255, 0.5);
+      border-radius: 5px;
 
-    transition-duration: $transition-time;
+      position: absolute;
+      top: 50%;
+      transform: translate(0, -50%);
+      left: 5px;
+      right: 5px;
+
+      pointer-events: none;
+  }
+}
+
+.isOpenContextMenu {
+  transform: scale(1.1);
+  cursor: auto;
 
 
+  img {
+    filter: blur(10px);
+    height: 100%;
   }
 
-  .isOpenContextMenu {
-    transform: scale(1.1);
-    cursor: auto;
-
-
-    img {
-      filter: blur(5px);
-      height: 100%;
-    }
+  .descriptions {
+    display: none;
   }
 
-  h3 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    pointer-events: none;
-    text-shadow: 2px 2px black;
-  }
+}
+
+h3 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  pointer-events: none;
+  text-shadow: 2px 2px black;
+}
+
 }
 
 .contextMenuWrapper {
