--- a/src/_definitions.scss
+++ b/src/_definitions.scss
@@ -10,9 +10,13 @@ $body-font-family: "Nunito", Helvetica, Arial, sans-serif;
 $app-background-color: #171a1d;
 $font-color: white;
 $font-darken-color: darken($font-color, 50%);
+$context-background-color: rgba(255, 255, 255, 0.5);
 $red-color: #cf1f1f;
 
 $h1-font-size: 50px;
 $h2-font-size: 40px;
 $h3-font-size: 25px;
 $h4-font-size: 20px;
+
+// diameter of arc in Resume Component
+$arc-diameter: 40px;
