--- a/src/components/Main/Projects/Projects.module.scss
+++ b/src/components/Main/Projects/Projects.module.scss
@@ -1,23 +1,28 @@
 .projectsPageWrapper {
-    min-height: 100vh;
 
     // style for container
     & > div {
-        height: 100%;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+    }
+    .headWrapper {
     }
 
-    .projectOutFlexWrapper {
+    .projectsOutFlexWrapper {
+        flex-grow: 1;
         margin-top: 15px;
         display: flex;
 
         justify-content: center;
-        align-items: center;
+        align-items: flex-start;
 
         .projectsFlexWrapper {
-            height: 80%;
+            height: 100%;
 
             display: flex;
             flex-wrap: wrap;
+            align-items: center;
             justify-content: center;
             align-content: flex-start;
         }
