--- a/src/components/Main/ContactMe/ContactMe.module.scss
+++ b/src/components/Main/ContactMe/ContactMe.module.scss
@@ -1,3 +1,104 @@
+@import "/src/definitions";
+
+$feedback-background-color: rgba(82, 78, 78, 0.18);
+
 .contactMePageWrapper {
+
+  > div {
     height: 100vh;
+    //border: white solid 1px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .feedbackWrapper {
+    margin-top: 20px;
+    padding: 15px;
+    max-width: 60%;
+    background-color: $feedback-background-color;
+    border: white solid 1px;
+    border-radius: 5px;
+    box-shadow: -5px 5px 10px 1px $red-color;
+
+    .writersAddressWrapper {
+      display: flex;
+      justify-content: space-between;
+
+      .writersFormWrapper {
+        margin-top: 10px;
+        &:not(:first-child){
+          margin-left: 15px;
+        }
+        display: flex;
+        align-items: center;
+
+        label {
+          color: $red-color;
+        }
+
+        input {
+          margin-left: 5px;
+          padding: 2px;
+          width: 270px;
+          background-color: $feedback-background-color;
+        }
+      }
+    }
+
+    .writersTextWrapper {
+      margin-top: 10px;
+      width: 100%;
+
+      textarea {
+        padding: 5px 15px;
+        background-color: $feedback-background-color;
+        width: 100%;
+        height: 150px;
+        resize: none;
+      }
+    }
+
+    .projectsMarksWrapper {
+
+      .projectsMarksInnerWrapper {
+
+      }
+
+      .addProjectRatingWrapper {
+        margin-top: 10px;
+        > :not(:first-child) {
+          margin-left: 10px;
+        }
+
+        select {
+          background-color: $feedback-background-color;
+
+          option {
+            color: black;
+          }
+        }
+        .addProjectRatingButton {
+          color: black;
+        }
+      }
+    }
+
+    .separator {
+      margin-top: 10px;
+      border-top: $red-color solid 2px;
+    }
+
+    .submitButtonWrapper {
+      margin-top: 15px;
+      display: flex;
+      justify-content: center;
+
+      .submitButton {
+        padding: 2px 15px;
+        color: $red-color;
+      }
+    }
+  }
 }
