--- a/src/_definitions.scss
+++ b/src/_definitions.scss
@@ -11,6 +11,7 @@ $app-background-color: #171a1d;
 $font-color: white;
 $font-darken-color: darken($font-color, 50%);
 $context-background-color: rgba(255, 255, 255, 0.5);
+$feedback-background-color: rgba(82, 78, 78, 0.18);
 $red-color: #cf1f1f;
 
 $h1-font-size: 50px;
