--- a/src/components/commons/Rating/Rating.module.scss
+++ b/src/components/commons/Rating/Rating.module.scss
@@ -5,22 +5,10 @@ $stars-active-color: gold;
 $star-height: 30px;
 
 .rating {
-  padding: 0 5px;
-  border-radius: 5px;
-  background-color: $context-background-color;
-
-  position: absolute;
-  top: 3%;
-  left: 50%;
-  transform: translateX(-50%);
-
-  box-sizing: border-box;
-
   display: flex;
   align-items: flex-end;
   font-size: $star-height;
   line-height: 0.75;
-
   cursor: default;
 
   .ratingBody {
@@ -29,7 +17,7 @@ $star-height: 30px;
     &::before {
       color: $stars-border-color;
       content: '☆☆☆☆☆';
-      display: block;
+      display: inline-block;
     }
 
     .ratingActive {
@@ -39,12 +27,11 @@ $star-height: 30px;
       height: 100%;
       top: 0;
       left: 0;
-      z-index: -100;
 
       &::before {
         color: $stars-active-color;
         content: '★★★★★';
-        display: block;
+        display: inline-block;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -54,6 +41,7 @@ $star-height: 30px;
     }
 
     .ratingItems {
+
       display: flex;
       position: absolute;
       width: 100%;
