--- a/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
@@ -12,14 +12,22 @@
 
     .writersFormWrapper {
       margin-top: 10px;
-      &:not(:first-child){
+
+      &:not(:first-child) {
         margin-left: 15px;
       }
+
       display: flex;
       align-items: center;
 
       label {
         color: $red-color;
+
+        &::before {
+          content: '⃰';
+          font-weight: bold;
+          margin-right: 5px;
+        }
       }
 
       input {
@@ -42,19 +50,49 @@
     }
   }
 
-  .separator {
-    margin-top: 10px;
-    border-top: $red-color solid 2px;
-  }
-
-  .submitButtonWrapper {
-    margin-top: 15px;
+  .buttonsWrapper {
+    margin-top: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    background-color: $red-color;
+    box-shadow: inset 0 0 11px 11px $app-background-color;
 
-    .submitButton {
+    button {
       padding: 2px 15px;
-      color: $red-color;
+      min-width: 100px;
+      color: white;
+      font-weight: bold;
+      text-shadow: 1px 1px black;
+      transition-duration: 70ms;
+      box-shadow: inset 0 0 8px 8px #232222;
+      border: white solid 1px;
+      border-radius: 5px;
+
+      // style for disabled
+      //opacity: .5;
+      //pointer-events: none;
+
+      &:hover {
+        transform: scale(1.02);
+        text-decoration: underline;
+      }
+      &:active {
+        transform: scale(1.05);
+        text-shadow: 2px 2px black;
+        text-decoration: none;
+      }
+
+      &:nth-child(1) {
+        background-color: #1ea7fd;
+      }
+      &:nth-child(2) {
+        background-color: white;
+      }
+      &:nth-child(3) {
+        background-color: $red-color;
+      }
+
     }
   }
+
 }
