added description for leaderboardPosition in Challenge (CodeWars) component.

--- a/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
@@ -4,6 +4,7 @@
 
   input, textarea, select {
     background-color: $feedback-background-color;
+    border: $font-darken-color solid 1px;
   }
 
   .writersAddressWrapper {
