--- a/src/components/Main/Challenge/CodeWars/CodeWars.module.scss
+++ b/src/components/Main/Challenge/CodeWars/CodeWars.module.scss
@@ -31,6 +31,11 @@
     .value {
       color: $red-color
     }
+
+    .numOfCodeWarsUsers {
+      font-size: .75em;
+      color: $font-darken-color;
+    }
   }
 
   .buttonWrapper {
