--- a/src/_definitions.scss
+++ b/src/_definitions.scss
@@ -14,6 +14,10 @@ $context-background-color: rgba(255, 255, 255, 0.5);
 $feedback-background-color: rgba(82, 78, 78, 0.18);
 $red-color: #cf1f1f;
 
+$error-color: rgba(255, 0, 0, 0.5);
+$warning-color: rgba(255, 215, 0, 0.5);
+$info-color: rgba(0, 128, 0, 0.5);
+
 $h1-font-size: 50px;
 $h2-font-size: 40px;
 $h3-font-size: 25px;
