--- a/src/components/Snackbar/Snackbar.module.scss
+++ b/src/components/Snackbar/Snackbar.module.scss
@@ -4,4 +4,10 @@
   position: fixed;
   bottom: 20px;
   right: 20px;
+  max-height: 100vh;
+  overflow-y: hidden;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
