added superScrollListener, connect affects in components on scrollEvent.

--- a/src/components/Header/Navigation/Navigation.module.scss
+++ b/src/components/Header/Navigation/Navigation.module.scss
@@ -11,14 +11,14 @@
 
       li {
 
-        // must be refactor
-        &:first-child a {
-          color: $red-color;
-        }
         a {
         }
       }
     }
   }
+}
+
+.activeLink {
+  color: $red-color
 }
 
