--- a/src/_definitions.scss
+++ b/src/_definitions.scss
@@ -8,6 +8,7 @@ $title-font-family: "Saira", Helvetica, Arial, sans-serif;
 $body-font-family: "Nunito", Helvetica, Arial, sans-serif;
 
 $app-background-color: #171a1d;
+$app-background-opacity-color: rgba(23, 26, 29, 0.8);
 $font-color: white;
 $font-darken-color: darken($font-color, 50%);
 $context-background-color: rgba(255, 255, 255, 0.5);
