--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,7 +1,7 @@
 @import "/src/definitions";
 
 .headerWrapper {
-    background-color: $app-background-color;
+    background-color: $app-background-opacity-color;
     position: fixed;
     height: $page-padding-top;
     width: 100%;
@@ -13,5 +13,9 @@
         justify-content: space-between;
         align-items: center;
     }
+}
+
+.headerWrapperOpacity {
+    background-color: $app-background-color;
 }
 
