--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -13,9 +13,10 @@
         justify-content: space-between;
         align-items: center;
     }
+    transition-duration: 2s;
 }
 
 .headerWrapperOpacity {
-    background-color: $app-background-color;
+    background-color: transparent;
 }
 
