--- a/src/components/Main/Home/Home.module.scss
+++ b/src/components/Main/Home/Home.module.scss
@@ -1,6 +1,33 @@
 @import '../../../definitions';
 
 .homePageWrapper {
+
+    > div {
+        position: relative;
+    }
+
+    .myPhoto1 {
+        position: absolute;
+        //right: 10%;
+        right: 0;
+        top: 0;
+        z-index: 0;
+        //background-color: #cf1f1f;
+        //box-shadow: inset 0 0 20px 40px $app-background-color;
+        //z-index: 1;
+
+        //height: 100vh;
+        //width: 35%;
+        //background-image: url("../../../assets/images/meFirstPage.png");
+        //background-repeat: no-repeat;
+        //background-size: contain;
+
+        img {
+            height: 100vh;
+            opacity: .5;
+        }
+    }
+
     .shortInf {
         height: $page-height;
 
