--- a/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
@@ -68,6 +68,7 @@
       box-shadow: inset 0 0 8px 8px #232222;
       border: white solid 1px;
       border-radius: 5px;
+      cursor: pointer;
 
       &:hover {
         transform: scale(1.02);
