--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400;1,700&family=Saira:wght@400;700&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +10,8 @@
 
     color: white;
     font-family: $body-font-family;
+
+    scroll-behavior: smooth;
 }
 
 .container {
