--- a/src/App.scss
+++ b/src/App.scss
@@ -4,14 +4,14 @@
 
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-    color: white;
+//    margin: 0;
+//    padding: 0;
+//    box-sizing: border-box;
+//
+//    color: white;
     font-family: $body-font-family;
-
-    scroll-behavior: smooth;
+//
+//    scroll-behavior: smooth;
 }
 
 .container {
