--- a/src/_definitions.scss
+++ b/src/_definitions.scss
@@ -26,3 +26,10 @@ $h4-font-size: 20px;
 
 // diameter of arc in Resume Component
 $arc-diameter: 40px;
+
+// ADAPTIVE
+$width-adaptive-step-one: 1350px;
+$width-adaptive-step-two: 1150px;
+$width-adaptive-step-three: 950px;
+$width-adaptive-step-four: 768px; // tablet
+$width-adaptive-step-five: 450px; // mobile
