--- a/src/components/Main/AboutMe/FirstPage/Skills/Skill/Skill.module.scss
+++ b/src/components/Main/AboutMe/FirstPage/Skills/Skill/Skill.module.scss
@@ -3,20 +3,47 @@
 
 .skillWrapper {
     display: inline-block;
+
+    @media screen and (max-width: $width-adaptive-step-four){
+        margin-left: 10px;
+    }
+
     .diagramWrapper {
         position: relative;
     }
-    .value {
 
+    .value {
         font-size: 50px;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translateX(-50%) translateY(-50%);
+        text-align: center;
+
+        @media screen and (max-width: $width-adaptive-step-five){
+            position: unset;
+            transform: unset;
+            top: unset;
+            left: unset;
+            font-size: 35px;
+        }
     }
 
     .skillTitle {
         text-align: center;
+    }
+
+    h4 {
+        @media screen and (max-width: $width-adaptive-step-five){
+            font-size: 20px;
+        }
+    }
+
+    .diagram {
+
+        @media screen and (max-width: $width-adaptive-step-five){
+            display: none;
+        }
     }
 }
 
