--- a/src/components/Main/Challenge/Challenge.module.scss
+++ b/src/components/Main/Challenge/Challenge.module.scss
@@ -1,6 +1,7 @@
 @import "/src/definitions";
 
 .challengeWrapper {
+  overflow: hidden;
   position: relative;
   min-height: 100vh;
 
@@ -11,15 +12,25 @@
   > div > div, p {
     width: 60%;
     margin-top: 20px;
+
+    @media screen and (max-width: $width-adaptive-step-four){
+      width: unset;
+    }
   }
 
   .descriptions {
     font-size: 22px;
+
+    @media screen and (max-width: $width-adaptive-step-two){
+      font-size: 18px;
+    }
+    @media screen and (max-width: $width-adaptive-step-four){
+      font-size: 16px;
+    }
   }
 
   .backgroundSamurai {
-    width: 85%;
-    //width: 95%;    //big screen - 95% - adaptive
+    width: 70%;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -29,5 +40,68 @@
     background-size: contain;
     background-repeat: no-repeat;
     box-shadow: inset 0 0 50px 50px $app-background-color;
+
+    @media screen and (max-width: $width-adaptive-step-one){
+      width: 75%;
+    }
+    @media screen and (max-width: 1300px){
+      width: 80%;
+    }
+    @media screen and (max-width: 1250px){
+      width: 85%;
+    }
+    @media screen and (max-width: $width-adaptive-step-two){
+      width: 90%;
+    }
+    @media screen and (max-width: 1100px){
+      width: 95%;
+    }
+    @media screen and (max-width: 1000px){
+      width: 100%;
+    }
+    @media screen and (max-width: $width-adaptive-step-three){
+      width: 105%;
+    }
+    @media screen and (max-width: 900px){
+      width: 110%;
+    }
+    @media screen and (max-width: 850px){
+      width: 120%;
+    }
+    @media screen and (max-width: 800px){
+      width: 125%;
+    }
+    @media screen and (max-width: $width-adaptive-step-four){
+      right: -10%;
+      width: 130%;
+    }
+    @media screen and (max-width: 700px){
+      width: 145%;
+    }
+    @media screen and (max-width: 650px){
+      width: 155%;
+    }
+    @media screen and (max-width: 600px){
+      right: -15%;
+      width: 165%;
+    }
+    @media screen and (max-width: 550px){
+      width: 185%;
+    }
+    @media screen and (max-width: 500px){
+      right: -25%;
+      width: 195%;
+    }
+    @media screen and (max-width: $width-adaptive-step-five){
+      width: 225%;
+    }
+    @media screen and (max-width: 400px){
+      right: -30%;
+      width: 240%;
+    }
+    @media screen and (max-width: 360px){
+      right: -90%;
+      width: 290%;
+    }
   }
 }
