--- a/src/components/Main/ContactMe/FeedBack/FeedBack.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/FeedBack.module.scss
@@ -9,4 +9,14 @@
   border-radius: 5px;
   box-shadow: -5px 5px 10px 1px rgba(255, 255, 255, 0.5);
 
+  @media screen and (max-width: $width-adaptive-step-one){
+    max-width: 70%;
+  }
+  @media screen and (max-width: $width-adaptive-step-two){
+    max-width: 80%;
+  }
+  @media screen and (max-width: $width-adaptive-step-four){
+    max-width: unset;
+    width: 95%;
+  }
 }
