--- a/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/FeedbackForm/FeedbackForm.module.scss
@@ -11,11 +11,19 @@
     display: flex;
     justify-content: space-between;
 
+    @media screen and (max-width: $width-adaptive-step-four){
+      flex-direction: column;
+    }
+
     .writersFormWrapper {
       margin-top: 10px;
 
       &:not(:first-child) {
         margin-left: 15px;
+
+        @media screen and (max-width: $width-adaptive-step-four){
+          margin-left: unset;
+        }
       }
 
       display: flex;
@@ -35,6 +43,17 @@
         margin-left: 5px;
         padding: 2px;
         width: 270px;
+
+        @media screen and (max-width: $width-adaptive-step-two){
+          width: 220px;
+        }
+        @media screen and (max-width: $width-adaptive-step-three){
+          width: 180px;
+        }
+        @media screen and (max-width: $width-adaptive-step-four){
+          width: unset;
+          flex-grow: 1;
+        }
       }
     }
   }
@@ -55,8 +74,8 @@
     margin-top: 30px;
     display: flex;
     justify-content: space-around;
-    background-color: $red-color;
-    box-shadow: inset 0 0 11px 11px $app-background-color;
+    //background-color: $red-color;
+    //box-shadow: inset 0 0 11px 11px $app-background-color;
 
     button {
       padding: 2px 15px;
@@ -69,6 +88,11 @@
       border: white solid 1px;
       border-radius: 5px;
       cursor: pointer;
+
+      @media screen and (max-width: $width-adaptive-step-four){
+        min-width: 70px;
+        font-size: 12px;
+      }
 
       &:hover {
         transform: scale(1.02);
