--- a/src/components/Main/ContactMe/FeedBack/ProjectsForm/ProjectForm/ProjectForm.module.scss
+++ b/src/components/Main/ContactMe/FeedBack/ProjectsForm/ProjectForm/ProjectForm.module.scss
@@ -8,6 +8,10 @@
   > * {
     &:not(:first-child) {
       margin-left: 15px;
+
+      @media screen and (max-width: $width-adaptive-step-four){
+        margin-left: 5px;
+      }
     }
   }
 
@@ -27,6 +31,16 @@
   h5 {
     font-size: 18px;
     flex-grow: 1;
+
+    @media screen and (max-width: $width-adaptive-step-four){
+      font-size: 14px;
+    }
+    @media screen and (max-width: 500px){
+      font-size: 12px;
+    }
+    @media screen and (max-width: $width-adaptive-step-five){
+      font-size: 10px;
+    }
   }
 
   .ratingWrapper {
@@ -39,6 +53,13 @@
       padding: 0 5px;
       width: 300px;
       resize: none;
+
+      @media screen and (max-width: $width-adaptive-step-three){
+        width: 200px;
+      }
+      @media screen and (max-width: $width-adaptive-step-four){
+        width: 100%;
+      }
     }
   }
 }
