--- a/src/components/Main/MyResume/Statistics/StatisticsPart/StatisticPart.module.scss
+++ b/src/components/Main/MyResume/Statistics/StatisticsPart/StatisticPart.module.scss
@@ -2,22 +2,46 @@
 
 .statisticsPartWrapper {
     padding: 5px 20px;
-    width: 20%;
+    width: 23%;
 
-    background-color: $red-color;
-    box-shadow: inset 0 0 20px 40px $app-background-color;
+    background: rgb(23,26,29);
+    background: radial-gradient(circle, rgba(23,26,29,1) 0%, rgba(207,31,31,1) 0%, rgba(23,26,29,1) 32%);
 
     display: flex;
     flex-direction: column;
     align-items: center;
 
+    @media screen and (max-width: $width-adaptive-step-four){
+        width: 150px;
+    }
+
     .value {
         font-size: 60px;
         line-height: 1;
+
+        @media screen and (max-width: $width-adaptive-step-two){
+            font-size: 50px;
+        }
+        @media screen and (max-width: $width-adaptive-step-three){
+            font-size: 40px;
+        }
+        @media screen and (max-width: $width-adaptive-step-four){
+            font-size: 30px;
+        }
     }
 
     .title {
         font-weight: bold;
         font-size: 20px;
+
+        @media screen and (max-width: $width-adaptive-step-two){
+            font-size: 16px;
+        }
+        @media screen and (max-width: $width-adaptive-step-three){
+            font-size: 14px;
+        }
+        @media screen and (max-width: $width-adaptive-step-four){
+            font-size: 12px;
+        }
     }
 }
