--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,7 +1,6 @@
 @import "/src/_definitions.scss";
 
 .sidebarWrapper {
-
     position: fixed;
     z-index: 1000;
     top: 0;
@@ -14,6 +13,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media screen and (max-width: $width-adaptive-step-three){
+        width: 40px;
+    }
+    @media screen and (max-width: $width-adaptive-step-five){
+        display: none;
+    }
 
     .socialNetworkLink:not(:first-child) {
         margin-top: 20px;
